Bug 15211 - gpfs man page on gpfs:refuse_dacl_protected outdated and incorrect
Summary: gpfs man page on gpfs:refuse_dacl_protected outdated and incorrect
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: VFS Modules (show other bugs)
Version: 4.17.1
Hardware: All All
: P5 normal (vote)
Target Milestone: 4.18
Assignee: Christof Schmitt
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-22 11:29 UTC by Björn Jacke
Modified: 2022-10-24 16:45 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Jacke 2022-10-22 11:29:01 UTC
the vfs_gpfs man page contains this: "As GPFS does not support the ACE4_FLAG_NO_PROPAGATE NFSv4 flag (which would be the mapping for the DESC_DACL_PROTECTED flag), the status of this flag is currently silently ignored by Samba. That means that if you deselect the "Allow inheritable permissions..." checkbox in Windows' ACL dialog and then apply the ACL, the flag will be back immediately."

First of all ACE4_FLAG_NO_PROPAGATE is not the same or the mapping of DESC_DACL_PROTECTED. 

In addition to that gpfs does contain support for DESC_DACL_PROTECTED, so saying that gpfs does not support this is outdated also.

Another point: A workaround for NFS4 ACL implementations that do not support DESC_DACL_PROTECTED should not be done in filesystem specific modules but instead in the generic NFS4 code, so that all NFS4 implemenations can benefit from this. Another bad example, which did try to solve this also in a filesystem specific module only is vfs_zfsacl, they introduced "zfsacl:map_dacl_protected" which is also a bad idea, not only because it is not generic NFS4 code but also because it is making a (bad) guess only.

For vfs_gpfs I would like to propose, that the code and the documentation for gpfs:refuse_dacl_protected should simply be removed now.
Comment 1 Christof Schmitt 2022-10-23 22:37:08 UTC
(In reply to Björn Jacke from comment #0)

> For vfs_gpfs I would like to propose, that the code and the documentation for > gpfs:refuse_dacl_protected should simply be removed now.

I agree that this is outdated. All supported GPFS versions these days
do have support for storing this flag, so the Samba workaround can
be removed.

I can try to write a patch. If you have one already, i can also review that
one.
Comment 2 Christof Schmitt 2022-10-23 23:15:05 UTC
(In reply to Christof Schmitt from comment #1)
> I can try to write a patch.

Here is my proposal:
https://gitlab.com/samba-team/samba/-/merge_requests/2766
Comment 3 Samba QA Contact 2022-10-24 16:42:04 UTC
This bug was referenced in samba master:

5c627988a268adc8da7b1c954f3706c5c878fd3b
da663b5d4f16478973510d3b0016e41d642fa256
Comment 4 Björn Jacke 2022-10-24 16:45:23 UTC
closing, will be fixed in 4.18.